crates/nfctl-cli/tests/snapshots/render__ls_empty_namespace.snap
---
source: crates/nfctl-cli/tests/render.rs
expression: "out(&[\"ls\", \"-n\", \"empty\"]).await"
---
No pipelines found.
