crates/nfctl-cli/tests/snapshots/render__ls_table.snap
---
source: crates/nfctl-cli/tests/render.rs
expression: "out(&[\"ls\"]).await"
---
NAMESPACE  KIND        NAME             PHASE    VERTICES  AGE
demo       MonoVertex  mono             Running  1         3d
demo       Pipeline    paused-pipeline  Paused   3         3d
demo       Pipeline    simple-pipeline  Running  3         3d
other      Pipeline    elsewhere        Failed   3         3d
