crates/nfctl-cli/tests/snapshots/render__mvtx_ls.snap
---
source: crates/nfctl-cli/tests/render.rs
expression: "out(&[\"mvtx\", \"ls\", \"-o\", \"wide\"]).await"
---
NAMESPACE  NAME  PHASE    REPLICAS  READY  AGE  DESIRED  TRANSFORMER  MAP  MESSAGE
demo       mono  Running  1         1      3d   Running  yes          no
