crates/nfctl-cli/tests/snapshots/render__mvtx_status.snap
---
source: crates/nfctl-cli/tests/render.rs
expression: "out(&[\"mvtx\", \"status\", \"mono\"]).await"
---
demo/mono  phase=Running  health=unknown  desired=Running  replicas=1/1
warning: health: daemon: no health configured
